# apfs-rs

./: .gitignore  Cargo.toml
src/: apfs.rs  lib.rs  meta.rs
tests/: test_apfs.rs
