[package]
name = "apfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin = "0.9.5"
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs.git" }
bitflags = "1.3.2"
serde = { version = "1.0.155", default-features = false, features = ["derive"] }
fletcher = "0.3.0"
itertools = { version = "0.10.5", default-features = false, features = [
  "use_alloc",
] }

[dev-dependencies]
env_logger = "*"

[features]
std = []
